# Ubuntu_CXX_with_CMake

./: CMakeLists.txt  README.md
Inc/: wifes.h
Src/: main.cpp  wifes.cpp
